[package]
name = "test-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#csv = "1.3.0"
cudarc = { version = "0.13.5", optional = true }
#num-traits = "0.2.19"
#half = { version = "2.5.0", optional = true }
#image = "0.25.2"
#intel-mkl-src = { version = "0.8.1", optional = true }
#hf-hub = { git = "https://github.com/aifx-art/hf-hub.git", branch = "wip", features = ["tokio",] }



#palette = { version = "0.7.6", optional = true }
#enterpolation = { version = "0.2.1", optional = true }
#pyo3 = { version = "0.23.4", features = ["auto-initialize"], optional = true }
#rubato = { version = "0.16.1", optional = true }

anyhow = "1.0.95"
#clap = { version = "4.5.28", features = ["derive"] }
#symphonia = { version = "0.5.4", features = ["all"], optional = true }
#safetensors = "0.4.1"
#tokenizers = { version = "0.21.1", features = ["onig"] }
#rayon = "1.10.0"
#cpal = { version = "0.15.2", optional = true }

#tracing = "0.1.40"
#tracing-chrome = "0.7.2"
#tracing-subscriber = "0.3.18"
#png = "0.17.16"
#redb = "2.4.0"
#once_cell = "1.20.3"
#itertools = "0.14.0"
#rand = "0.9.0"
#bincode = "1.3"
#tauri-plugin-shell = "2.0.0-beta"
#serde = { version = "1.0.217", features = ["derive"] }
#serde_json = "1.0.138"
#chrono = { version = "0.4.38", features = ["serde"] }
#directories = "5.0.1"
#tokio = "1.43.0"

# candle
accelerate-src = { version = "0.3.2", optional = true }


# LOCAL
#candle-core = { path = "../../rust/candle/candle-core" }
#candle-datasets = { path = "../candle/candle-datasets", optional = true }
#andle-nn = { path = "../../rust/candle/candle-nn" }
#candle-transformers = { path = "../../rust/candle/candle-transformers" }
#candle-flash-attn = { path = "../../rust/candle/candle-flash-attn", optional = true }

candle-core = { git = "https://github.com/xkeyC/candle.git", branch = "fl_caption_build" }
candle-nn = { git = "https://github.com/xkeyC/candle.git", branch = "fl_caption_build" }
candle-transformers = { git = "https://github.com/xkeyC/candle.git", branch = "fl_caption_build" }
candle-flash-attn = { git = "https://github.com/xkeyC/candle.git", branch = "fl_caption_build", optional = true}

candle-onnx = { path = "../../rust/candle/candle-onnx", optional = true }

#poem-openapi = "5.1.5"
#noisegen = { version = "0.1.0", path = "../noisegen" }
#noisegen = {git = "https://github.com/aifx-art/noisegen.git" }
#memmap2 = "0.9.4"


[dev-dependencies]
#ab_glyph = "0.2.27"
#byteorder = "1.5.0"
#imageproc = "0.25"
#memmap2 = "0.9.4"
#rand = "0.9.0"

# Necessary to disambiguate with tokio in wasm examples which are 1.28.1

#tokio = "1.40.0"

#noisegen = {git = "https://github.com/aifx-art/noisegen.git" }

[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
#mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
#nccl = ["cuda", "cudarc/nccl", "dep:half"]
#onnx = ["candle-onnx"]
metal = ["candle-core/metal", "candle-nn/metal"]
#candle-datasets = ["dep:candle-datasets"]
candle-onnx = ["dep:candle-onnx"]
#microphone = ["cpal"]
#encodec = ["cpal", "symphonia", "rubato"]
#depth_anything_v2 = ["palette", "enterpolation"]

[build-dependencies]
#anyhow = {  }
bindgen_cuda = { version = "0.1.1", optional = true }
